# surgeyos-ros2-ws

./: .gitignore  README.md  requirements.txt
.github/workflows/: build-matrix.yml
docs/: README.md  _sidebar.md  foxglove.md  getting-started.md  hardware.md  index.html  raspberry-pi-setup.md  simulation.md  troubleshooting.md  video-streaming.md
ino/: 6dof-servo-arm-demo.ino  gantry-controller-nodemcu.ino  keyboard-control-move.ino  roarm-demo-trajectory.ino  roarm-line-seg-demo.ino  ros2-serial-ctrl-bridge.ino  x-and-y-axes-test.ino
rpi/: .env.example  Dockerfile  README.md  build.sh  docker-compose.yml  image-build.sh
rpi/surgeyos/config/: deb12-ros2-camera.yaml  ubuntu22-ros2-camera.yaml
rpi/surgeyos/layer/: ros2-humble.yaml  rpi-boot-firmware.yaml  rpi-camera-tools.yaml  rpi-linux-2712.yaml  rpi5.yaml  systemd-net-min.yaml  ubuntu-jammy-minbase.yaml  wifi-systemd-wpa.yaml
rpi/surgeyos/scripts/: wifi-bringup.sh
rpi/surgeyos/templates/: README.md  wpa_supplicant-wlan0.conf.tpl
scripts/: install_ros2_extras.sh  install_ros2_rolling.sh
sketches/: gantry-linear-control-ros2.ino
src/arm_path/: package.xml  setup.cfg  setup.py
src/arm_path/arm_path/: arm1_demo_joint_states.py  dual_arm_continuous_joint_states.py  gazebo_demo_joint_commands.py  keyboard_joint_teleop.py  keyboard_teleop.py  path_planner_wave.py
src/gantry_controller/: package.xml  setup.cfg  setup.py
src/gantry_controller/gantry_controller/: __init__.py  controller_node.py  serial_driver.py
src/gantry_controller/launch/: gantry_controller.launch.py
src/gantry_controller/resource/: gantry_controller
src/gantry_controller/test/: test_xmllint.py
src/gantry_linear_control/: CMakeLists.txt  __init__.py  package.xml  setup.cfg  setup.py
src/gantry_linear_control/action/: MoveLinear.action
src/gantry_linear_control/drivers/: serial_driver.py
src/gantry_linear_control/launch/: gantry.launch.py
src/gantry_linear_control/msg/: GantryState.msg
src/gantry_linear_control/nodes/: gantry_joint_trajectory.py  linear_action_server.py  serial_driver_node.py  xyz_path_planner.py
src/kinematics/: CMakeLists.txt  package.xml
src/kinematics/src/: tf_to_inverse.cpp
src/objects/: package.xml  setup.cfg  setup.py
src/objects/meshes/: mounting_dock.stl
src/objects/objects/: mounting_dock_publisher.py
src/roarm/: CMakeLists.txt  package.xml  setup.cfg
src/roarm/launch/: roarm.launch.py
src/robot_description/: CMakeLists.txt  package.xml
src/robot_description/launch/: display.launch.py
src/robot_description/meshes/: 400p.part  400p.stl  8mm_acme_nut_plate.part  8mm_acme_nut_plate.stl  aluminum_ring.part  aluminum_ring.stl  axis1.part  axis1.stl  axis2.part  axis2.stl  axis3.part  axis3.stl  axis4.part  axis4.stl  axis5.part  axis5.stl  axis6.part  axis6.stl  ball_bearing_5_x_16_x_5.part  ball_bearing_5_x_16_x_5.stl  ball_bearing_8_x_16_x_5.part  bigger_ring.part  bigger_ring.stl  eccentric_spacer_6mm.part  eccentric_spacer_6mm.stl  flexible_coupling_8mm_x_8mm.part  flexible_coupling_8mm_x_8mm.stl  gantry_column_base_plate.part  gantry_column_base_plate.stl  gt2_timing_pulley_20_tooth_8mm_bore.part  joining_plate_90_degree.part  (+71 more)
src/robot_description1/: CMakeLists.txt  package.xml
src/robot_description2/: CMakeLists.txt  package.xml
src/surgery/: package.xml  setup.cfg  setup.py
src/vision/: package.xml  setup.py
(+57 files in other folders)
