<?xml version="1.0"?>
<package format="3">
  <name>gantry_linear_control</name>
  <version>0.1.0</version>
  <description>ROS 2 Python control for a 3-axis Cartesian gantry via NodeMCU over serial.</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>

  <!-- For msg/action generation -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
