<?xml version="1.0"?>
<package format="3">
  <name>objects</name>
  <version>0.0.1</version>
  <description>RViz object mesh publishers.</description>
  <maintainer email="karadalex@gmail.com">Alexios Karadimos</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>ament_index_python</depend>
  <depend>rclpy</depend>
  <depend>visualization_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
